add convertion dfa -> min dfa, add drawing for graphs